Fixed most simple warnings.
Mostly converting the primitive definitions for Bool, Integer and Double.