@@ -16,7 +16,7 @@ class CC2Elm extends ChipElm {
 
 	public CC2Elm(int xa, int ya, int xb, int yb, int f, StringTokenizer st) {
 		super(xa, ya, xb, yb, f, st);
-		gain = new Double(st.nextToken()).doubleValue();
+		gain = Double.valueOf(st.nextToken()).doubleValue();
 	}
 
 	@Override
