@@ -19,8 +19,8 @@ class LogicInputElm extends SwitchElm {
 			StringTokenizer st) {
 		super(xa, ya, xb, yb, f, st);
 		try {
-			hiV = new Double(st.nextToken()).doubleValue();
-			loV = new Double(st.nextToken()).doubleValue();
+			hiV = Double.valueOf(st.nextToken()).doubleValue();
+			loV = Double.valueOf(st.nextToken()).doubleValue();
 		} catch (Exception e) {
 			hiV = 5;
 			loV = 0;
