@@ -25,8 +25,8 @@ class PotElm extends CircuitElm implements AdjustmentListener {
 
 	public PotElm(int xa, int ya, int xb, int yb, int f, StringTokenizer st) {
 		super(xa, ya, xb, yb, f);
-		maxResistance = new Double(st.nextToken()).doubleValue();
-		position = new Double(st.nextToken()).doubleValue();
+		maxResistance = Double.valueOf(st.nextToken()).doubleValue();
+		position = Double.valueOf(st.nextToken()).doubleValue();
 		sliderText = st.nextToken();
 		while (st.hasMoreTokens())
 			sliderText += ' ' + st.nextToken();
