@@ -12,7 +12,7 @@ class ResistorElm extends CircuitElm {
 
 	public ResistorElm(int xa, int ya, int xb, int yb, int f, StringTokenizer st) {
 		super(xa, ya, xb, yb, f);
-		resistance = new Double(st.nextToken()).doubleValue();
+		resistance = Double.valueOf(st.nextToken()).doubleValue();
 	}
 
 	@Override
