@@ -18,10 +18,10 @@ class SparkGapElm extends CircuitElm {
 
 	public SparkGapElm(int xa, int ya, int xb, int yb, int f, StringTokenizer st) {
 		super(xa, ya, xb, yb, f);
-		onresistance = new Double(st.nextToken()).doubleValue();
-		offresistance = new Double(st.nextToken()).doubleValue();
-		breakdown = new Double(st.nextToken()).doubleValue();
-		holdcurrent = new Double(st.nextToken()).doubleValue();
+		onresistance = Double.valueOf(st.nextToken()).doubleValue();
+		offresistance = Double.valueOf(st.nextToken()).doubleValue();
+		breakdown = Double.valueOf(st.nextToken()).doubleValue();
+		holdcurrent = Double.valueOf(st.nextToken()).doubleValue();
 	}
 
 	@Override
