@@ -21,7 +21,7 @@ class Switch2Elm extends SwitchElm {
 	public Switch2Elm(int xa, int ya, int xb, int yb, int f,
 			StringTokenizer st) {
 		super(xa, ya, xb, yb, f, st);
-		link = new Integer(st.nextToken()).intValue();
+		link = Integer.valueOf(st.nextToken()).intValue();
 		noDiagonal = true;
 	}
 
