@@ -18,14 +18,14 @@ class TappedTransformerElm extends CircuitElm {
 
 	public TappedTransformerElm(int xa, int ya, int xb, int yb, int f, StringTokenizer st) {
 		super(xa, ya, xb, yb, f);
-		inductance = new Double(st.nextToken()).doubleValue();
-		ratio = new Double(st.nextToken()).doubleValue();
+		inductance = Double.valueOf(st.nextToken()).doubleValue();
+		ratio = Double.valueOf(st.nextToken()).doubleValue();
 		current = new double[4];
 		curcount = new double[4];
-		current[0] = new Double(st.nextToken()).doubleValue();
-		current[1] = new Double(st.nextToken()).doubleValue();
+		current[0] = Double.valueOf(st.nextToken()).doubleValue();
+		current[1] = Double.valueOf(st.nextToken()).doubleValue();
 		try {
-			current[2] = new Double(st.nextToken()).doubleValue();
+			current[2] = Double.valueOf(st.nextToken()).doubleValue();
 		} catch (Exception e) {
 		}
 		noDiagonal = true;
